--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
-  "name": "meteo",
-  "version": "0.0.0",
-  "description": "meteo radar",
+  "name": "resume",
+  "version": "0.0.1",
+  "description": "Lipatov CV",
+  "scripts": {
+    "dev": "node server & gulp"
+  },
   "dependencies": {
-    "grunt-contrib-less": "0.9.0",
+    "grunt-contrib-less": "^0.9.0",
     "grunt-contrib-watch": "",
     "grunt-contrib-uglify": "",
     "grunt-contrib-concat": "",
     "grunt-string-replace": "~1.0.0"
   },
   "devDependencies": {
-    "grunt-contrib-uglify": "^0.11.0"
+    "grunt-contrib-uglify": "^0.11.0",
+    "gulp": "^3.9.1",
+    "gulp-connect": "^5.0.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-plumber-notifier": "0.0.3",
+    "gulp-pug": "^3.3.0",
+    "gulp-sync": "^0.1.4",
+    "merge-stream": "^1.0.1"
   }
 }
